--- a/gallery.html
+++ b/gallery.html
@@ -44,19 +44,12 @@
      </header>
      <div></div>
      <section id="gallery">
-        <div class="g1"><img src="20180906180442_1-removebg-preview.png" alt=""></div>
-        <div class="g2"><img src="51mTpWCxB4L._UF894_1000_QL80_-removebg-preview.png" alt=""></div>
-        <div class="g3"><img src="0198028396912-removebg-preview.png" alt=""></div>
-        <div class="g4"><img src="61J55w3bV4L._UF1000_1000_QL80_-removebg-preview.png" alt=""></div>
-        <div class="g5"><img src="travis.png" alt="" class="travis">
-        <img src="disco.png" alt="" class="disco"></div>
-        <div class="g6"></div>
-        <div class="g7"></div>
-        <div class="g8"></div>
-        <div class="g9"></div>
-        <div class="g10"></div>
-        <div class="g11"></div>
-        <div class="g12"></div>
+        <div><img class="g1" src="51mTpWCxB4L._UF894_1000_QL80_-removebg-preview.png" alt=""></div>
+        <div><img class="g3" src="61J55w3bV4L._UF1000_1000_QL80_-removebg-preview.png" alt=""></div>
+        <div><img class="g4" src="61Rkt8HXA2L._UF894_1000_QL80_-removebg-preview.png" alt=""></div>
+        <div><img class="g5" src="377A8D8D-F5CB-4938-B126-C50C880B72D0.png-removebg-preview.png" alt=""></div>
+        <div><img class="g7" src="0198028396912-removebg-preview.png" alt=""></div>
+
      </section>
      
  </body>
